2007-10-09  Jb Evain  <jbevain@novell.com>

	Integration of patches from Carlo Kok <ck@remobjects.com>:

	* Mono.Cecil/AssemblyNameReference.cs:
		Protect against null culture.

	* Mono.Cecil/FieldDefinition.cs:
		Clean or set the HasFieldMarshal flag when setting
		MarshalSpecs on fields.

	* Mono.Cecil/GenericInstanceType.cs:
		Properly initialize the IsValueType from the element type.

2007-10-09  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/ReflectionWriter.cs: check for duplicates
	in the MemberRef row.

2007-10-08  Sebastien Pouliot  <sebastien@ximian.com>

	* standalone.make: Revert changes so standalone Cecil (in SVN) can
	be built using this Makefile (required for Gendarme);
	* README: Update build and bug instructions.

2007-10-07  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/BaseAssemblyResolver.cs: first lookup assemblies
	in the specified directories before trying the framework dir.

2007-10-06  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Cil/OpCode.cs: make that a struct again, it
	make the 2.1 profile explode. Will investigate why.

2007-10-06  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/MethodCallingConvention.cs: Not a [Flag]

2007-10-05  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Cil/OpCode.cs: Change OpCode from struct to class
	to avoid copying everything everytime.

2007-09-28  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/SecurityDeclarationReader.cs:
		Adapt patch from Carlo Kok  <ck@remobjects.com>.
		Properly read unicode string constants.

	* Mono.Cecil/SecurityDeclarationReader.cs:
		Adapt patch from Carlo Kok  <ck@remobjects.com>.
		For some MS assemblies, the security declaration contains
		one zero byte.

2007-09-24  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/ModuleDefinition.cs: after a FullLoad, the symbol
	reader is not needed anymore.

2007-09-18  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Cil/MethodBody.cs:
		Adapt a patch from Ivan <ivanjh@gmail.com>.
		Fix cloning of the This parameter.
